--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Threes!</h1>
-    <button onClick="playThrees()" class="threes">Roll!</button>
+    <button onClick="playThrees()" class="threes">Roll for Threes!</button>
     <div class="results"></div>
+    <button onClick="playCeelo()" class="ceelo">Roll for Ceelo!</button>
 </body>
 </html>
