Creates hold array, pushes clicked dice values to that array, and logs it to the console.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Dice Game</title>
 </head>
 <body>
     <h1>Threes!</h1>
     <button onClick="playThrees()" class="threes">Roll for Threes!</button>
     <div class="results"></div>
-    <button onClick="playCeelo()" class="ceelo">Roll for Ceelo!</button>
+    <!-- <button onClick="playCeelo()" class="ceelo">Roll for Ceelo!</button> -->
 </body>
 </html>
