Adds functions to hide/show html elements but does not implement them. Also creates choose game buttons.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <title>Dice Game</title>
 </head>
 <body>
-    <h1>Threes!</h1>
-    <button onClick="playThrees()" class="threes">Roll for Threes!</button>
+    <h1>Vanilla Dice</h1>
+    <h2>Choose a game</h2>
+    <button class="choice">Ceelo</button>
+    <button class="choice">Threes</button>
+    <div></div>
+    <button onClick="playThrees()" class="game" id="threes">Roll for Threes!</button>
     <div class="results"></div>
     <!-- <button onClick="playCeelo()" class="ceelo">Roll for Ceelo!</button> -->
 </body>
