Adds function to hide/show ceelo button. Function does not fully work yet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div></div>
     <button onClick="playThrees()" class="game" id="threes">Roll for Threes!</button>
     <div class="results"></div>
-    <button onClick="playCeelo()" class="ceelo">Roll for Ceelo!</button>
+    <button onClick="playCeelo()" id="ceelo">Roll for Ceelo!</button>
 </body>
 </html>
