removes html onClick on the buttons and replaces them with eventlisteners to play both games

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Dice Game</title>
 </head>
 <body>
-    <h1>Vanilla Dice</h1>
+    <h1 class="header">Vanilla Dice</h1>
     <h2>Choose a game</h2>
     <button class="choice" id="ceeloButton">Ceelo</button>
-    <button onClick="showThrees()" class="choice" id="threesButton">Threes</button>
+    <button class="choice" id="threesButton">Threes</button>
     <div></div>
-    <button onClick="playThrees()" class="game hidden" id="threes">Roll for Threes!</button>
+    <button class="game hidden" id="ceelo">Roll for Ceelo!</button>
+    <button class="game hidden" id="threes">Roll for Threes!</button>
     <div class="results"></div>
-    <button onClick="playCeelo()" class="game hidden" id="ceelo">Roll for Ceelo!</button>
+    
 </body>
 <script src="index.js"></script>
 </html>
