Adds to dice selection function in Threes the ability to hide the dice value once it is chosen and pushed to the hold array.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <h1 class="header">Vanilla Dice</h1>
-    <h2>Choose a game</h2>
-    <button class="choice" id="ceeloButton">Ceelo</button>
-    <button class="choice" id="threesButton">Threes</button>
+    <h2 class="header">Choose a game</h2>
+    <button class="choice c" id="ceeloButton">Ceelo</button>
+    <button class="choice t" id="threesButton">Threes</button>
     <div></div>
-    <button class="game hidden" id="ceelo">Roll for Ceelo!</button>
-    <button class="game hidden" id="threes">Roll for Threes!</button>
-    <div class="results"></div>
+    <button class="game hidden c" id="ceelo">Roll for Ceelo!</button>
+    <div id="ceeloResults"></div>
+    <button class="game hidden t" id="threes">Roll for Threes!</button>
+    <div id="results"></div>
     
 </body>
 <script src="index.js"></script>
