Adds the hiding of the roll button after rolling and presents a reroll button in it's place.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <button class="game hidden c" id="ceelo">Roll for Ceelo!</button>
     <div id="ceeloResults"></div>
     <button class="game hidden t" id="threes">Roll for Threes!</button>
+    <button class="game hidden rr">Reroll</button>
+    <div></div>
     <div id="results"></div>
     
 </body>
