Uses CSS to add colors and custom buttons.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <title>Dice Game</title>
 </head>
 <body>
-    <h1 class="header">Vanilla Dice</h1>
-    <h2 class="header">Choose a game</h2>
-    <button class="choice c" id="ceeloButton">Ceelo</button>
-    <button class="choice t" id="threesButton">Threes</button>
-    <div></div>
-    <button class="game hidden c" id="ceelo">Roll for Ceelo!</button>
+    <div id="header">
+            <h1>Vanilla Dice</h1>
+            <br />
+            <h2>Choose a game</h2>
+    </div>
+    
+    <div class="buttonDiv">
+        <button class="button choice c" id="ceeloButton">Ceelo</button>
+        <button class="button choice t" id="threesButton">Threes</button>
+    </div>
+    <br />
+    <button class="button game hidden c" id="ceelo">Roll for Ceelo!</button>
     <div id="ceeloResults"></div>
-    <button class="game hidden t" id="threes">Roll for Threes!</button>
-    <button class="game hidden rr">Reroll</button>
-    <div></div>
+    <button class="button game hidden t" id="threes">Roll for Threes!</button>
+    <button class="button game hidden rr">Reroll</button>
+    <br />
     <div id="results"></div>
     
 </body>
