--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <button class="button game hidden rr">Reroll</button>
     <br />
     <div id="results"></div>
-    
+    <br /><div class="buttonDiv">
+    <button class ="button" id="reset">Reset game</button>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
