Adds and implements show score button to Threes game.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="ceeloResults"></div>
     <button class="button game hidden t" id="threes">Roll for Threes!</button>
     <button class="button game hidden rr">Reroll</button>
+    <button class="button scoreButton hidden">Show score</button>
     <br />
     <div id="results"></div>
     <br /><div class="buttonDiv">
