Adds ability to submit a score from all displayed dice values without needing to add them to hold array first.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
         <button class="button choice t" id="threesButton">Threes</button>
     </div>
     <br />
+    <div class="buttonDiv">
     <button class="button game hidden c" id="ceelo">Roll for Ceelo!</button>
     <div id="ceeloResults"></div>
     <button class="button game hidden t" id="threes">Roll for Threes!</button>
     <button class="button game hidden rr">Reroll</button>
-    <button class="button scoreButton hidden">Show score</button>
+</div>
     <br />
     <div id="results"></div>
     <br /><div class="buttonDiv">
+            <button class="button scoreButton hidden">Show score</button>
+            <br />
+            <div></div>
     <button class ="button" id="reset">Reset game</button>
     </div>
 </body>
