--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <br />
     <div class="buttonDiv">
+        <div class="hidden" id="rolled" ><h3>You rolled</h3></div>
     <button class="button game hidden c" id="ceelo">Roll for Ceelo!</button>
     <div id="ceeloResults"></div>
     <button class="button game hidden t" id="threes">Roll for Threes!</button>
@@ -27,6 +28,7 @@
 </div>
     <br />
     <div id="results"></div>
+    <div class="hidden" id="instructions"><h3>Click on dice to keep. Must choose at least one before rolling again</h3></div>
     <br /><div class="buttonDiv">
             <button class="button scoreButton hidden">Show score</button>
             <br />
