Refactors Threes' firstRoll function further, adding removeElement and toggleHiddenClass function calls.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <button class="button choice t" id="threesButton">Threes</button>
     </div>
     <br />
-    <div class="buttonDiv">
-        <div class="hidden" id="rolled" ><h3>You rolled</h3></div>
+    <div class="buttonDiv">   
     <button class="button game hidden c" id="ceelo">Roll for Ceelo!</button>
     <div id="ceeloResults"></div>
     <button class="button game hidden t" id="threes">Roll for Threes!</button>
     <button class="button game hidden rr">Reroll</button>
+    <div class="hidden" id="rolled" ><h3>You rolled</h3></div>
 </div>
     <br />
     <div id="results"></div>
-    <div class="hidden" id="instructions"><h3>Click on dice to keep. Must choose at least one before rolling again</h3></div>
+    <div class="hidden" id="instructions"><h3>Click on dice to keep. Must choose at least one to roll again</h3></div>
     <br /><div class="buttonDiv">
             <button class="button scoreButton hidden">Show score</button>
             <br />
