--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@
     <button class ="button" id="reset">Reset game</button>
     </div>
 </body>
-<script type="module" src="index.js"></script>
+<script type="module" src="App.js"></script>
 </html>
