--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <br />
     <div class="buttonDiv">   
     <button class="button game hidden c" id="ceelo">Roll for Ceelo!</button>
-    <div id="ceeloResults"></div>
     <button class="button game hidden t" id="threes">Roll for Threes!</button>
     <button class="button game hidden rr">Reroll</button>
     <div class="hidden" id="rolled" ><h3>You rolled</h3></div>
 </div>
     <br />
-    <div id="results"></div>
+    <div id="ceeloResults"></div>
+    <div id="threesResults"></div>
     <div class="hidden" id="instructions"><h3>Click on dice to keep. Must choose at least one to roll again</h3></div>
     <br /><div class="buttonDiv">
             <button class="button scoreButton hidden">Show score</button>
