--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <button class='button scoreButton hidden'>Show score</button>
             <br />
             <div></div>
-    <button class ='button' id='reset'>Reset game</button>
+    <button class ='button hidden' id='threesReset'>Reset game</button>
+    <button class ='button hidden' id='ceeloReset'>Reset game</button>
     </div>
 </body>
 <script type='module' src='App.js'></script>
