Adds a remove element function call on the buttonDiv to the Ceelo and Threes button event listeners.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Choose a game</h2>
     </div>
     
-    <div class='buttonDiv'>
+    <div id='buttonDiv'>
         <button class='button choice c' id='ceeloButton'>Ceelo</button>
         <button class='button choice t' id='threesButton'>Threes</button>
     </div>
