Moves instructions to the header.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id='header'>
             <h1>Vanilla Dice</h1>
             <br />
-            <h2>Choose a game</h2>
+            <h2 id='choose'>Choose a game</h2>
+            <div class='hidden' id='instructions'><h2>Click on dice to keep. <br />Must choose at least one to roll again</h2></div>
     </div>
     
     <div id='buttonDiv'>
@@ -29,7 +30,7 @@
     <div id='ceeloResults'></div>
     <div id='ceeloScore' class='hidden'></div>
     <div id='threesResults'></div>
-    <div class='hidden' id='instructions'><h3>Click on dice to keep. <br />Must choose at least one to roll again</h3></div>
+   
     <br /><div class='buttonDiv'>
             <button class='button scoreButton hidden'>Show score</button>
             <br />
